--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,20 +22,21 @@
   </style>
   
   <script type="importmap">
-  {
-    "imports": {
-      "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-      "react/": "https://esm.sh/react@^19.2.3/",
-      "react": "https://esm.sh/react@^19.2.3",
-      "lucide-react": "https://esm.sh/lucide-react@^0.562.0"
-    }
+{
+  "imports": {
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "react": "https://esm.sh/react@19.0.0",
+    "lucide-react": "https://esm.sh/lucide-react@0.460.0",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
   }
-  </script>
+}
+</script>
 </head>
 <body class="bg-slate-50 text-slate-900 overflow-x-hidden">
   <div id="root"></div>
   
-  <!-- Entry Point -->
-  <script type="text/babel" data-type="module" src="index.tsx"></script>
+  <!-- Entry Point redirected to script.tsx per request -->
+  <script type="text/babel" data-type="module" src="script.tsx"></script>
 </body>
 </html>
